--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,9 @@ python_picard >= 0.7
 mne-icalabel >= 0.4
 pyprep >= 0.4
 autoreject >= 0.4
+pandas >= 1.5.3
+openpyxl >= 3.0.0
+xlsxwriter >= 3.0.0
+mne-qt-browser >= 0.6.0
+PyQt6 >= 6.0.0
+mne-features >= 0.2.1
